updated interface with cea - part of cea componentization